--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,6 +46,10 @@ img.logo {
   width: 100%;
 }
 
+.h-100 {
+  height: 100%;
+}
+
 .w-50 {
   width: 50%;
 }
@@ -78,6 +82,10 @@ img.logo {
   justify-content: flex-start !important;
 }
 
+.justify-content-end {
+  justify-content: flex-end;
+}
+
 .justify-content-between {
   justify-content: space-between;
 }
@@ -86,12 +94,20 @@ img.logo {
   align-items: center;
 }
 
+.align-items-baseline {
+  align-items: baseline;
+}
+
 .align-items-start {
   align-items: flex-start;
 }
 
 .gap-10 {
   gap: 10px;
+}
+
+.gap-4 {
+  gap: 4px;
 }
 
 .mt-auto {
