--- a/src/app/video-room/video-room.component.html
+++ b/src/app/video-room/video-room.component.html
@@ -1,17 +1,23 @@
-<div *ngIf="!accepted" class="bounds">
-  <div class="fixed-height"></div>
-  <mat-icon class="ringing-icon" svgIcon="incoming"></mat-icon>
-  <div class="ringing-buttons-wrapper">
-    <button (click)="joinToSession()" color="primary" mat-fab>
-      <mat-icon svgIcon="camera"></mat-icon>
-    </button>
-    <button (click)="rejectCall()"  color="warn" mat-fab class="reject-btn ml-12">
-      <mat-icon svgIcon="hangup"></mat-icon>
-    </button>
+@if (!accepted) {
+  <div class="bounds">
+    <div class="fixed-height"></div>
+    <mat-icon class="ringing-icon" svgIcon="incoming"></mat-icon>
+    <div class="ringing-buttons-wrapper">
+      <button (click)="joinToSession()" color="primary" mat-fab>
+        <mat-icon svgIcon="camera"></mat-icon>
+      </button>
+      <button
+        (click)="rejectCall()"
+        color="warn"
+        mat-fab
+        class="reject-btn ml-12">
+        <mat-icon svgIcon="hangup"></mat-icon>
+      </button>
+    </div>
   </div>
-</div>
+}
 
-<div style="width: 100%; height: 100%; position: relative">
+<div class="video-room-wrapper">
   <div
     [ngClass]="{ ringing: !this.remoteUsers.length }"
     id="layout"
@@ -48,8 +54,9 @@
             [stream]="stream"
             [id]="stream.mediaStream.id"></app-peer-video>
 
-          <app-peer-audio *ngIf="stream.kind === 'audio'" [stream]="stream">
-          </app-peer-audio>
+          <app-peer-audio
+            *ngIf="stream.kind === 'audio'"
+            [stream]="stream"></app-peer-audio>
         </ng-container>
       </div>
     </ng-container>
@@ -60,9 +67,7 @@
       <mat-icon *ngIf="camStatus === 'on'" svgIcon="camera"></mat-icon>
       <mat-icon *ngIf="camStatus === 'off'" svgIcon="cameraOff"></mat-icon>
     </button>
-    <button
-      (click)="rejectCall()"
-      color="warn" mat-fab class="reject-btn">
+    <button (click)="rejectCall()" color="warn" mat-fab class="reject-btn">
       <mat-icon svgIcon="hangup"></mat-icon>
     </button>
     <button (click)="muteStatusChanged()" color="primary" mat-fab>
