--- a/src/app/video-room/video-room.component.scss
+++ b/src/app/video-room/video-room.component.scss
@@ -994,3 +994,20 @@ ion-fab-button.controller {
   position: relative;
   justify-content: center;
 }
+
+
+.video-room-wrapper {
+  width: 100%;
+  height: 100%;
+  position: relative
+}
+@media (max-width: 600px) {
+  .control-buttons-wrapper {
+    opacity: 0;
+    transition: opacity 0.3s ease;
+  }
+
+  .video-room-wrapper:hover .control-buttons-wrapper {
+    opacity: 1;
+  }
+}
