--- a/src/app/video-room/video-room.component.scss
+++ b/src/app/video-room/video-room.component.scss
@@ -996,25 +996,25 @@ ion-fab-button.controller {
   flex-wrap: wrap;
   position: relative;
   justify-content: center;
+  @media (max-width: 600px) {
+    display: none;
+  }
 }
 
+.video-room-wrapper .control-buttons-wrapper.show {
+  display: flex;
+}
 
 .video-room-wrapper {
   width: 100%;
   height: 100%;
   position: relative
 }
-@media (max-width: 600px) {
-  .control-buttons-wrapper {
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
-    transition: opacity 0.3s ease;
-  }
 
-  .video-room-wrapper:hover .control-buttons-wrapper {
-    opacity: 1;
-    visibility: visible;
-    pointer-events: auto;
+@media (max-width: 600px) {
+  @media (hover: hover) {
+    .video-room-wrapper:hover .control-buttons-wrapper {
+      display: flex;
+    }
   }
 }
