--- a/src/app/overlay/overlay.component.scss
+++ b/src/app/overlay/overlay.component.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-wrap: wrap;
 }
+
 .resume-element {
   width: 20%;
   display: flex;
@@ -64,6 +65,13 @@
   @media (max-width: 600px) {
     width: 100%;
     overflow: auto;
+  }
+}
+
+.overlay-button {
+  margin-top: auto;
+  @media (max-width: 600px) {
+    margin-top: unset;
   }
 }
 
@@ -216,7 +224,7 @@ div.btns {
     width: 100%;
   }
 
-  .resume,.close {
+  .resume, .close {
     width: 100%;
     display: flex;
     align-items: center;
@@ -326,7 +334,7 @@ textarea:focus {
 
 .feedback-overlay {
 
-  .feedback-overlay-content  {
+  .feedback-overlay-content {
     @media (max-width: 600px) {
       inset: 0;
       width: 100%;
@@ -385,6 +393,7 @@ textarea:focus {
         &:not(:last-child) {
           border-right: 1px solid #cacaca;
         }
+
         .btn {
           @media (min-width: 600px) {
             margin-top: auto;
