--- a/src/app/overlay/overlay.component.html
+++ b/src/app/overlay/overlay.component.html
@@ -15,7 +15,7 @@
           ? 'calc(100% - 70px);'
           : 'calc(100% - 150px);'
       ">
-      <app-chat [consultation]="consultation" [showInput]="false"></app-chat>
+      <app-chat [consultation]="consultation" [overlay]="true" [showInput]="false"></app-chat>
     </div>
   </div>
   <div
