--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -67,14 +67,15 @@
           </mat-form-field>
             <mat-radio-group
                     [(ngModel)]="messageService"
-                    (ngModelChange)="onMessageServiceChange()"
+                    (ngModelChange)="onMessageServiceChange($event)"
                     class="provider-radio-group"
                     *ngIf="showRadioGroup">
                 <mat-radio-button value="1">{{'profile.whatsapp' | translate}}</mat-radio-button>
                 <mat-radio-button value="2">{{'profile.sms' | translate}}</mat-radio-button>
             </mat-radio-group>
           <button
-            mat-icon-button
+            mat-flat-button
+            color="primary"
             *ngIf="isSMSPhoneChanged && !isLoading"
             [disabled]="isLoading"
             (click)="onSave()">
