refs #7881, Closing consultation modal is buggy

--- a/src/app/overlay/overlay.component.html
+++ b/src/app/overlay/overlay.component.html
@@ -92,7 +92,7 @@
   <div class="close-cont">
     <div class="overlay-content feedback-overlay-content">
       <div class="overlay-header" [ngClass]="{ 'big-font': noPagination }">
-        <h4 style="margin-top: 0; margin-bottom: 5px">
+        <h4 class="elements-header">
           {{ 'overlay.consultationSummary' | translate }}
         </h4>
         <div class="elements-wrapper">
