--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -67,7 +67,7 @@
           </mat-form-field>
             <mat-radio-group
                     [(ngModel)]="messageService"
-                    (ngModelChange)="onMessageServiceChange($event)"
+                    (ngModelChange)="onMessageServiceChange()"
                     class="provider-radio-group"
                     *ngIf="showRadioGroup">
                 <mat-radio-button value="1">{{'profile.whatsapp' | translate}}</mat-radio-button>
